[tool.poetry]
name = "parserkiosk"
version = "0.1.0"
description = "A test-suite generator for parsers."
authors = ["aarnav <aarnavbos@gmail.com>"]
license = "GPL-3.0"
homepage = "https://github.com/R9295/parser-kiosk"
repository = "https://github.com/R9295/parser-kiosk"
documentation = "https://github.com/R9295/parser-kiosk"
keywords = [
    "Parsers",
    "Parser",
    "Code Generation",
    "Testing",
]
[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
python-box = "^5.4.1"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
python-lsp-server = "^1.3.3"
ipdb = "^0.13.9"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = '\.pyi?$'
extend-include = true
exclude = '''
/(
    \.git
  | \.toml
  | \.lock
  | \.md
  | \.env
)/
'''

[tool.isort]
profile = "black"
