[tool.poetry]
name = "parserkiosk"
version = "0.2.2"
description = "A Proof of Concept multi-lingual test generation suite intended for parsers."
authors = ["aarnav <aarnavbos@gmail.com>"]

license = "GPL-3.0"

homepage = "https://github.com/R9295/parser-kiosk"
repository = "https://github.com/R9295/parser-kiosk"
documentation = "https://github.com/R9295/parser-kiosk"

keywords = [
    "Parsers",
    "Parser",
    "Code Generation",
    "Testing",
]

readme = "README.md"

classifiers = [
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
]

packages = [
    { include = "parserkiosk"}
]
 include = [
#    { path = "tests", format = "sdist" }
]

[tool.poetry.scripts]
parserkiosk = "parserkiosk:main"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
python-box = "^5.4.1"
Jinja2 = "^3.0.3"
yamale = "^4.0.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
python-lsp-server = "^1.3.3"
ipdb = "^0.13.9"
pytest = "^7.0.1"
pre-commit = "^2.17.0"
coverage = {extras = ["toml"], version = "^6.3.2"}
pyfakefs = "^4.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = '\.pyi?$'
extend-include = true
exclude = '''
/(
    \.git
  | \.toml
  | \.lock
  | \.md
  | \.env
  | \.examples*
)/
'''

[tool.isort]
profile = "black"
extend_skip = [".jinja2"]

[tool.coverage.run]
omit = [
    "tests/*",
]

